[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "Cython~=3.0.5",
    "numpy>=2.0.0rc1",
    "versioneer[toml]"
]
build-backend = "setuptools.build_meta"

[project]
name = "feature-selection-toolkit"
version = "0.2.0"
description = "A toolkit for feature selection in machine learning projects."
readme = "README.md"
authors = [
  { name = "Mevlüt Başaran", email = "mevlutbasaran01@gmail.com" }
]
license = {file = "LICENSE"}
requires-python = ">=3.8"
dependencies = [
  "numpy",
  "pandas",
  "scikit-learn",
  "tqdm",
  "joblib",
  "matplotlib",
  "statsmodels",
  "xgboost"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[project.urls]
homepage = "https://github.com/mevlt01001/feature_selection_toolkit"
documentation = "https://github.com/mevlt01001/feature_selection_toolkit#readme"
repository = "https://github.com/mevlt01001/feature_selection_toolkit"
